overflow fixed added more data

--- a/assets/css/history.css
+++ b/assets/css/history.css
@@ -8,6 +8,7 @@ html, body {
     left:0;
     right:0;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 body {
   background: #ffffff;
